# logitech-keyboard-weather-backlight

./: CMakeLists.txt  README.md
include/logitech_keyboard_weather_backlight/: plot_numbers.h  weather_data.h
lib/: libcurl_a.lib
src/: main.cpp  plot_numbers.cpp  weather_data.cpp
